Add class Utils