@@ -20,10 +20,13 @@ public class AdminProductImageService {
     private String uploadDir;
 
     public String uploadImage(String filename, InputStream inputStream) {
-        String newFileName = filename;
-        Path filePath = Paths.get(uploadDir).resolve(filename);
+        String newFileName = UploadedFilesUtils.slugifyFileName(filename);
+        newFileName = ExistingFileRenameUtils.renameIfExists(Path.of(uploadDir), newFileName);
+        Path filePath = Paths.get(uploadDir).resolve(newFileName);
+
         try (OutputStream outputStream = Files.newOutputStream(filePath)) {
             inputStream.transferTo(outputStream);
+            System.out.println();
         } catch (IOException e) {
             throw new RuntimeException("I can't save the file", e);
         }
